--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.2",
     "lucide-react": "^0.438.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.8",
     "next-intl": "^3.19.0",
     "next-pwa": "^5.6.0",
